# StockSalesPrediction

./: .gitignore  README.md  SalesDataLoader.py  pyproject.toml  salesprediction.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.6d677708-144b6390-72549e1f-8ae95e3e.tmp  cat_feature_index.7ebde53b-3313a052-29b034b-1e6c261b.tmp  cat_feature_index.898d44a5-ca514bbd-7d20f4bc-986ef1f0.tmp  cat_feature_index.c4bb883c-2dd9fbc3-7d457995-1db8f739.tmp  cat_feature_index.e8373bc3-b687f272-f89c8a53-ac9271ff.tmp  cat_feature_index.fd2a0e05-13b0e486-93caf317-f62b2209.tmp  cat_feature_index.fd6904d9-76b774f7-7ffc5ac7-65384f78.tmp
config/: best_models_config.json
